unirep/assets/explorer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: explorer
  annotations:
    {}
#    key: string
  labels:
    workload.user.cattle.io/workloadselector: apps.deployment-default-explorer
#    key: string
  namespace: default
spec:
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: apps.deployment-default-explorer
#      key: string
#    matchExpressions:
#      - key: string
#        operator: string
#        values:
#          - string
  template:
    metadata:
      labels:
        workload.user.cattle.io/workloadselector: apps.deployment-default-explorer
#        key: string
      namespace: default
    spec:
      containers:
        - imagePullPolicy: Always
          name: explorer
          securityContext:
            runAsNonRoot: false
            readOnlyRootFilesystem: false
            privileged: false
            allowPrivilegeEscalation: false
          _init: false
          __active: true
          image: jchancehud/unirep-explorer:latest
          ports:
            - name: api
              expose: true
              protocol: TCP
              containerPort: 8000
              _serviceType: ClusterIP
              _name: api
              _ipam: dhcp
      restartPolicy: Always
      volumes:
  replicas: 1
__clone: true
